--- a/VRChat/24/1151024.html
+++ b/VRChat/24/1151024.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hnkuExainnRUHZ4o1WMzRjpsEn0OcvdShzN+HM/BrcE="></script>
+    "wKXDiHUEv4X2eX9ipynC722BkavEmOQDF2I6kL4DCTg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け３Dモデル「428ちゃん」","description":"・更新\n22/2/14\n　Idleアニメーションが割り当てられていなかった不具合を修正しました。\n　一部アニメーションを修正しました。\n\nVRChat向け３Dモデル「428ちゃん」です。\n\n\n！無料版と投げ銭用がありますが内容は同じものです！\n\n\nフルボディトラッキングでの動作は確認済み、無料で扱っていただくことが可能です。\nVRChatに使用する際は設定済みのprefabをそのままhierarchyに持っていくだけでアップロードが可能です。\n\nDLされたzipを解凍すると「Model」、「texture」、「VRCAvatarModel_428chan_Ver2018.unitypackage」、「readme」、「OLDVerFolder」、各PC版またはQuest版用のblenderファイルが同梱されています。\n\nこのモデルはVRChat向けに作られたものですが、ゲームの製作素材などにも\nご利用できます。また、モデル テクスチャなどの改変や\nバーチャルYouTuberなどの動画配信の演出など自由にご利用できます。\n\n\n本製品の二次配等は禁止しており、モデル改変後等の配布も同じく禁止します。\n\nPC版\n▽面数：9047\nテクスチャ枚数：2 枚\n（PC版はマスクテクスチャを使用しています。）\nメッシュオブジェクト数：1～6\n\n使用シェーダー：まんまるしぇーだー3\n\nQuest版\n▽面数：4902\nテクスチャ枚数：1\nメッシュオブジェクト数：1\n\n使用シェーダー：VRChat/Mobile/Toon Lit\n\nミニ428ちゃん\n▽面数：256\nテクスチャ枚数：1\nメッシュオブジェクト数：1\n\n使用シェーダー：VRChat/Mobile/Toon Lit\n\n・FBXについて\n「VRC_428chan_PC.fbx」「VRC_428chan_quest.fbx」はメッシュが一つに統合されたデータとなります。\n「VRC_428chan_PC_ALLMesh.fbx」は各パーツにメッシュが切り分けられた状態のデータとなります。\n「VRC_428chan_quest_ALLEarMesh.fbx」は耳パーツを選べるように切り分けられたデータとなります。\n「256pory428chan.fbx」は256ポリゴンで作られた428ちゃんのオマケデータとなります。\n\nVer2までのテクスチャの互換性はありません、ご了承ください。\n\n*写真3～4枚目は開発途中の写真です。","url":"https://booth.pm/ja/items/1151024","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1151024/71e78ac1-5116-4e68-8af3-d24053b2a41e_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hnkuExainnRUHZ4o1WMzRjpsEn0OcvdShzN+HM/BrcE="></script>
+    nonce="wKXDiHUEv4X2eX9ipynC722BkavEmOQDF2I6kL4DCTg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1151024/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               450
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1151024/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               450
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
