--- a/VRChat/61/1149761.html
+++ b/VRChat/61/1149761.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lShuC/LqNnWBHDBzF1c4ctEpN/tYe3suYW4IakHz9OE="></script>
+    "Y4bwI0Si9LtQY7txD6mbm3jtv5ia0EbHhdvK3M//1xM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"さわしろちゃんバッジ","description":"ボクセルモデルのさわしろちゃんバッジが登場！\nVRChatでアクセサリーとしてご利用いただけます！\n\n内容物一覧\nさわしろちゃんバッジ大 中 小とテクスチャ\nさわしろちゃんバッジ平らバージョン大 中 小とテクスチャ\n\n利用規約\n著作権はさわしろちゃんにあります。\n\n他モデルにくっつけるための改変\nモデルにくっつけての再配布は有償無償問わず可\n(使う時にここのURLを添えてくれるととっても嬉しい！)\n\n公序良俗に反する事には使わないでね。\n\nさわしろちゃんは本モデル利用を起因とした損失について一切の責任を負いません。\n\n利用規約はユーザーへの通知無く変更される場合があります\n\n不具合がありましたらtwitterのDM等に連絡ください。\n","url":"https://booth.pm/ja/items/1149761","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e30e960d-4f1b-47f5-9ae0-9b9fdb3b8675/i/1149761/f036d2fa-a5dc-4c22-80c1-cb44bd30a208_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lShuC/LqNnWBHDBzF1c4ctEpN/tYe3suYW4IakHz9OE="></script>
+    nonce="Y4bwI0Si9LtQY7txD6mbm3jtv5ia0EbHhdvK3M//1xM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1149761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1149761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
