--- a/VRChat/75/1149075.html
+++ b/VRChat/75/1149075.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sQkldnsVCNckD5AHau1AXzBF/rczSPMasHozNUK/PGI="></script>
+    "pay/duJfcTt3u8LsNcd3eiwtI6KS5ub+iZaW1zuzZTQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（無料有り）【巫女服＿緋袴】Humanoid形式対応VRアバター衣装","description":"お正月には和服でいきましょう！　神社で巫女さんのアルバイトでもいかがですか？\n\nダイナミックボーン式の「巫女服＿緋袴」となっています。\n足に追従しているのでしゃがんだりしても足が抜けにくくなっています。（歩く際にはどうしても足が出ます）\n\n無料配布ですので、気軽にお使いください！","url":"https://booth.pm/ja/items/1149075","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1149075/6135a5b6-367c-4a4c-83a8-4f073d0fddae_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sQkldnsVCNckD5AHau1AXzBF/rczSPMasHozNUK/PGI="></script>
+    nonce="pay/duJfcTt3u8LsNcd3eiwtI6KS5ub+iZaW1zuzZTQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1149075/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              465
+                              466
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1149075/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              465
+                              466
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
